Issueid #227199 fix: [storylingo] player names are not visible properly

--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,11 @@ html {
   margin: 0;
   padding: 0;
 }
+
 * {
   box-sizing: border-box;
 }
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -82,7 +84,7 @@ code {
   padding: 15px 90px;
   border-radius: 10px;
   color: white;
-  font-family: fantasy;
+  font-family: "Comic Sans MS", "Papyrus";
   background-color: grey;
   font-size: 25px;
   opacity: 0.9;
@@ -94,9 +96,9 @@ code {
   padding: 15px 90px;
   border-radius: 10px;
   /* color: white; */
-  font-family: fantasy;
-  background: rgb(2,0,36);
-  background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(252,255,103,1) 0%, rgba(255,205,80,1) 100%);
+  font-family: "Comic Sans MS", "Papyrus";
+  background: rgb(2, 0, 36);
+  background: radial-gradient(circle, rgba(2, 0, 36, 1) 0%, rgba(252, 255, 103, 1) 0%, rgba(255, 205, 80, 1) 100%);
   font-weight: 500;
   font-size: 25px;
   opacity: 0.9;
@@ -107,7 +109,7 @@ code {
   font-family: 'Rocher';
   /* src: url('../../all-games-storyling/src/assets/fontFamily/RocherColorGX.woff2');
    */
-   src: url('./assets/fontFamily/RocherColorGX.woff2');
+  src: url('./assets/fontFamily/RocherColorGX.woff2');
 }
 
 body {
@@ -129,38 +131,42 @@ h1 {
   font-palette: --Mint;
   font-family: Rocher;
 }
+
 .min-test {
   font-size: 32px;
   font-palette: --Mint;
   font-family: Rocher;
   cursor: pointer;
 }
+
 .min-selectstory {
   margin-top: 40px;
   font-size: 38px;
   font-palette: --Mint;
   font-family: Rocher;
 }
-.position-set{
+
+.position-set {
   display: flex;
   flex-direction: column;
   position: absolute;
   margin-left: 35px;
   margin-top: 8px;
 }
+
 .story-text {
   width: 472px;
-      height: 325px;
-      background-size: cover;
-      background-position: center;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      font-weight: bold;
-      padding-left: 45px;
-      padding-right: 45px;
-    font-size: 18px;
+  height: 325px;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-weight: bold;
+  padding-left: 45px;
+  padding-right: 45px;
+  font-size: 18px;
 
   /* align-self: center;
   padding-left: 45px;
@@ -169,11 +175,11 @@ h1 {
   font-weight: bold;
   width: 500px;
   height: 500px; */
- }
+}
 
 
 
- @media only screen and (min-width:0) and (max-width: 600px) {
+@media only screen and (min-width:0) and (max-width: 600px) {
   body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
       "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
@@ -187,7 +193,7 @@ h1 {
     height: 100%;
   }
 
-  .position-set{
+  .position-set {
     margin-top: -18px;
   }
 
@@ -198,15 +204,17 @@ h1 {
     width: 90%;
     padding-left: 24px;
     padding-right: 45px;
-   }
-  .player_text{
+  }
+
+  .player_text {
     font-size: 20px;
     margin-top: 50px;
     position: relative;
   }
 }
+
 @media only screen and (min-width:600px) and (max-width: 1597px) {
-  .position-set{
+  .position-set {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -216,14 +224,16 @@ h1 {
     margin-top: 8px;
     padding-left: 30px;
   }
+
   .story-text {
     text-align: center;
     font-size: 18px;
     font-weight: bold;
     width: 400px;
-   }
+  }
 }
-.storyling-logo{
+
+.storyling-logo {
   cursor: pointer;
   height: 25px;
 }
